--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,8 @@
 {
-    "music_volume": 0.7155172413793104,
+    "music_volume": 0.021551724137931036,
     "sound_volume": 1.0,
     "music_muted": true,
     "sounds_muted": true,
-    "theme": 2
+    "theme": 1,
+    "username": "reli"
 }
