--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
-    "music_volume": 0.021551724137931036,
+    "music_volume": 0.5387931034482759,
     "sound_volume": 1.0,
     "music_muted": true,
     "sounds_muted": true,
-    "theme": 1,
-    "username": "player-705607"
+    "theme": 5,
+    "username": "reliponj"
 }
